@@ -120,6 +120,20 @@ name|apache
 operator|.
 name|lucene
 operator|.
+name|index
+operator|.
+name|FieldInfo
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
 name|search
 operator|.
 name|DocIdSetIterator
@@ -1326,6 +1340,35 @@ name|field
 argument_list|)
 return|;
 block|}
+block|}
+comment|// optimization for Solr which keeps a FieldInfos on-hand
+annotation|@
+name|Override
+DECL|method|getFieldInfo
+specifier|protected
+name|FieldInfo
+name|getFieldInfo
+parameter_list|(
+name|String
+name|field
+parameter_list|)
+block|{
+return|return
+operator|(
+operator|(
+name|SolrIndexSearcher
+operator|)
+name|searcher
+operator|)
+operator|.
+name|getFieldInfos
+argument_list|()
+operator|.
+name|fieldInfo
+argument_list|(
+name|field
+argument_list|)
+return|;
 block|}
 annotation|@
 name|Override
